# my-workflows

./: Makefile  README.md  angular.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: config.rs  errors.rs  events.rs  mod.rs  state.rs
src-tauri/src/tray/: handlers.rs  menu.rs  mod.rs
src-tauri/src/utils/: cmd.rs  config.rs  constants.rs  mod.rs  process.rs
src/app/: app.commands.ts  app.component.css  app.component.html  app.component.ts  app.config.ts  app.events.ts  app.models.ts  app.service.ts  app.store.ts
src/app/components/command-params-view/: command-params-view.component.css  command-params-view.component.html  command-params-view.component.spec.ts  command-params-view.component.ts
src/app/components/command-view/: command-view.component.css  command-view.component.html  command-view.component.spec.ts  command-view.component.ts
src/app/components/kill-proc-confirm-dialog/: kill-proc-confirm-dialog.component.css  kill-proc-confirm-dialog.component.html  kill-proc-confirm-dialog.component.spec.ts  kill-proc-confirm-dialog.component.ts
src/app/components/tab-header/: tab-header.component.css  tab-header.component.html  tab-header.component.ts
src/app/components/title-bar/: title-bar.component.css  title-bar.component.html  title-bar.component.ts
